samples/_failures_safe/1761434885_9c59c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d7976b8.c: In function ‘main’:
./samples/SAFE/__tmp_7d7976b8.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
